core/src/main/java/net/hasor/data/ql/dsl/parser/GraphParser.java
/* GraphParser.java */
/* Generated By:JavaCC: Do not edit this line. GraphParser.java */
package net.hasor.data.ql.dsl.parser;
import net.hasor.data.ql.dsl.*;
import net.hasor.data.ql.dsl.domain.EqType;
import java.util.*;
import java.io.InputStream;
import java.io.ByteArrayInputStream;

public class GraphParser implements GraphParserConstants {
    private GraphParser (){}
    //
    public static void parserGraphQL(String queryString) throws ParseException {
        GraphParser parser = new GraphParser(new ByteArrayInputStream(queryString.getBytes()));
        parser.rootBlock();
    }
    public static void parserGraphQL(InputStream inputStream,String encoding) throws ParseException {
        GraphParser parser = new GraphParser(inputStream,encoding);
        parser.rootBlock();
    }

//-----------------------------------------------------------------------------

// .标识符
  final public void identifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NAME_LITERAL:{
      jj_consume_token(NAME_LITERAL);
      break;
      }
    case OCBRR:{
      jj_consume_token(OCBRR);
      jj_consume_token(NAME_LITERAL);
      jj_consume_token(CCBR);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .带引号的字符串
  final public void stringValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STR_DOUBLE_QUOTED:{
      jj_consume_token(STR_DOUBLE_QUOTED);
      break;
      }
    case STR_SINGLE_QUOTED:{
      jj_consume_token(STR_SINGLE_QUOTED);
      break;
      }
    case STR_EMPTY:{
      jj_consume_token(STR_EMPTY);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .空值
  final public void nullValue() throws ParseException {
    jj_consume_token(NULL);
  }

// .布尔
  final public void booleanValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:{
      jj_consume_token(TRUE);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .数字
  final public void numberValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DECIMAL_NUM:{
      jj_consume_token(DECIMAL_NUM);
      break;
      }
    case INTEGER_NUM:{
      jj_consume_token(INTEGER_NUM);
      break;
      }
    case HEX_NUM:{
      jj_consume_token(HEX_NUM);
      break;
      }
    case OCTAL_NUM:{
      jj_consume_token(OCTAL_NUM);
      break;
      }
    case BINARY_NUM:{
      jj_consume_token(BINARY_NUM);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .列表：[ ... ]
  final public void list() throws ParseException {
    if (jj_2_1(2)) {
      jj_consume_token(OBRA);
      jj_consume_token(CBRA);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OBRA:{
        jj_consume_token(OBRA);
        expression();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_1;
          }
          jj_consume_token(COMMA);
          expression();
        }
        jj_consume_token(CBRA);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// .对象：
  final public void object() throws ParseException {
    if (jj_2_2(2)) {
      jj_consume_token(OCBR);
      jj_consume_token(CCBR);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OCBR:{
        jj_consume_token(OCBR);
        stringValue();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          jj_consume_token(COLON);
          expression();
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            break label_2;
          }
          jj_consume_token(COMMA);
          stringValue();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COLON:{
            jj_consume_token(COLON);
            expression();
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            ;
          }
        }
        jj_consume_token(CCBR);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

//-----------------------------------------------------------------------------

// .表达式 =   表达式 or 表达式 + 运算符
  final public void expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPAR:{
      jj_consume_token(OPAR);
      expression();
      jj_consume_token(CPAR);
      break;
      }
    case B_O_OP:{
      jj_consume_token(B_O_OP);
      basicValue();
      break;
      }
    case INTEGER_NUM:
    case HEX_NUM:
    case OCTAL_NUM:
    case BINARY_NUM:
    case DECIMAL_NUM:
    case STR_DOUBLE_QUOTED:
    case STR_SINGLE_QUOTED:
    case STR_EMPTY:
    case OBRA:
    case OCBRR:
    case OCBR:
    case TRUE:
    case FALSE:
    case NULL:
    case NAME_LITERAL:{
      basicValue();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case QUEM:
    case A_O_OP:
    case TO_OP:{
      afterExpression();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
  }

  final public void afterExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case A_O_OP:{
      jj_consume_token(A_O_OP);
      break;
      }
    case TO_OP:{
      jj_consume_token(TO_OP);
      expression();
      break;
      }
    case QUEM:{
      jj_consume_token(QUEM);
      expression();
      jj_consume_token(COLON);
      expression();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .值
  final public void basicValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_NUM:
    case HEX_NUM:
    case OCTAL_NUM:
    case BINARY_NUM:
    case DECIMAL_NUM:
    case STR_DOUBLE_QUOTED:
    case STR_SINGLE_QUOTED:
    case STR_EMPTY:
    case TRUE:
    case FALSE:
    case NULL:{
      primitiveValue();
      break;
      }
    case OCBRR:
    case NAME_LITERAL:{
      identifier();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPAR:{
        funCall();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      break;
      }
    case OBRA:{
      list();
      break;
      }
    case OCBR:{
      object();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void primitiveValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STR_DOUBLE_QUOTED:
    case STR_SINGLE_QUOTED:
    case STR_EMPTY:{
      stringValue();
      break;
      }
    case NULL:{
      nullValue();
      break;
      }
    case TRUE:
    case FALSE:{
      booleanValue();
      break;
      }
    case INTEGER_NUM:
    case HEX_NUM:
    case OCTAL_NUM:
    case BINARY_NUM:
    case DECIMAL_NUM:{
      numberValue();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//-----------------------------------------------------------------------------
// .参数集：(xx , xx , xx)
  final public void paramSet() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(OPAR);
      jj_consume_token(CPAR);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPAR:{
        jj_consume_token(OPAR);
        paramItem();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[16] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          paramItem();
        }
        jj_consume_token(CPAR);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// .函数参数
  final public void paramItem() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LAMBDA:{
      lambdaCall();
      break;
      }
    case INTEGER_NUM:
    case HEX_NUM:
    case OCTAL_NUM:
    case BINARY_NUM:
    case DECIMAL_NUM:
    case STR_DOUBLE_QUOTED:
    case STR_SINGLE_QUOTED:
    case STR_EMPTY:
    case OPAR:
    case OBRA:
    case OCBRR:
    case OCBR:
    case B_O_OP:
    case TRUE:
    case FALSE:
    case NULL:
    case NAME_LITERAL:{
      expression();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .函数调用
  final public void funCall() throws ParseException {
    paramSet();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OBRA:{
      list();
      break;
      }
    case OCBR:{
      object();
      break;
      }
    case ORI:{
      jj_consume_token(ORI);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .Lambda函数： lambda : (obj,obj2) -> {}
  final public void lambdaCall() throws ParseException {
    jj_consume_token(LAMBDA);
    jj_consume_token(COLON);
    if (jj_2_4(2)) {
      jj_consume_token(OPAR);
      jj_consume_token(CPAR);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPAR:{
        jj_consume_token(OPAR);
        jj_consume_token(NAME_LITERAL);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[20] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          jj_consume_token(NAME_LITERAL);
        }
        jj_consume_token(CPAR);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(LAMBDAB);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OCBR:{
      jj_consume_token(OCBR);
      blockSet();
      jj_consume_token(CCBR);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      if (jj_2_5(2147483647)) {
        block();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

//-----------------------------------------------------------------------------
// .函数
  final public void varBlock() throws ParseException {
    jj_consume_token(VAR);
    identifier();
    jj_consume_token(EQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LAMBDA:{
      lambdaCall();
      break;
      }
    case INTEGER_NUM:
    case HEX_NUM:
    case OCTAL_NUM:
    case BINARY_NUM:
    case DECIMAL_NUM:
    case STR_DOUBLE_QUOTED:
    case STR_SINGLE_QUOTED:
    case STR_EMPTY:
    case OPAR:
    case OBRA:
    case OCBRR:
    case OCBR:
    case B_O_OP:
    case TRUE:
    case FALSE:
    case NULL:
    case NAME_LITERAL:{
      expression();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .判断
  final public void ifBlock() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(OPAR);
    expression();
    jj_consume_token(CPAR);
    blockSet();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSEIF:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_5;
      }
      jj_consume_token(ELSEIF);
      jj_consume_token(OPAR);
      expression();
      jj_consume_token(CPAR);
      blockSet();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      blockSet();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(END);
  }

// .反回
  final public void returnBlock() throws ParseException {
    jj_consume_token(RETURN);
    expression();
  }

// .选项指令
  final public void optionBlock() throws ParseException {
    jj_consume_token(OPTION);
    identifier();
    jj_consume_token(EQ);
    primitiveValue();
  }

// .块
  final public void block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      varBlock();
      break;
      }
    case IF:{
      ifBlock();
      break;
      }
    case RETURN:{
      returnBlock();
      break;
      }
    case OPTION:{
      optionBlock();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// .块
  final public void blockSet() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case RETURN:
      case VAR:
      case OPTION:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_6;
      }
      block();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMI:{
        jj_consume_token(SEMI);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        ;
      }
    }
  }

// 入口
  final public void rootBlock() throws ParseException {
    blockSet();
    jj_consume_token(0);
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_3R_14()
 {
    if (jj_scan_token(RETURN)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(ELSE)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3R_39()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(ELSEIF)) return true;
    if (jj_scan_token(OPAR)) return true;
    if (jj_3R_19()) return true;
    if (jj_scan_token(CPAR)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3R_13()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(OPAR)) return true;
    if (jj_3R_19()) return true;
    if (jj_scan_token(CPAR)) return true;
    if (jj_3R_20()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_21()) { jj_scanpos = xsp; break; }
    }
    xsp = jj_scanpos;
    if (jj_3R_22()) jj_scanpos = xsp;
    if (jj_scan_token(END)) return true;
    return false;
  }

  private boolean jj_3R_24()
 {
    if (jj_scan_token(OCBRR)) return true;
    if (jj_scan_token(NAME_LITERAL)) return true;
    if (jj_scan_token(CCBR)) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(56)) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    return false;
  }

  private boolean jj_3R_17()
 {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    if (jj_scan_token(VAR)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(EQ)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    return false;
  }

  private boolean jj_3R_36()
 {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_42()
 {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(NAME_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_35()
 {
    if (jj_scan_token(OCBR)) return true;
    if (jj_3R_20()) return true;
    if (jj_scan_token(CCBR)) return true;
    return false;
  }

  private boolean jj_3R_34()
 {
    if (jj_scan_token(OPAR)) return true;
    if (jj_scan_token(NAME_LITERAL)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_42()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(CPAR)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(OPAR)) return true;
    if (jj_scan_token(CPAR)) return true;
    return false;
  }
